replace: {
  path: {
    origin: "cli"
  }
  val: {
    ascii_val:
"hostname DE_D6_P200\n"
"grpc\n"
" port 57777\n"
"!\n"
"hostname SF-D\n"
"group BGP\n"
" router bgp '.*' instance '.*'\n"
"  nsr disable\n"
" !\n"
"telemetry model-driven\n"
" sensor-group test\n"
"  sensor-path openconfig-network-instance:network-instances/network-instance/afts\n"
" !\n"
"!\n"
"interface HundredGigE0/4/0/0/0\n"
" no shutdown\n"
"!\n"
"interface HundredGigE0/4/0/0/1\n"
" no shutdown\n"
"!\n"
"interface HundredGigE0/4/0/0/2\n"
" no shutdown\n"
"!\n"
"interface HundredGigE0/4/0/0/3\n"
" no shutdown\n"
"!\n"
"interface HundredGigE0/4/0/2/0\n"
" no shutdown\n"
"!\n"
"interface HundredGigE0/4/0/2/1\n"
" no shutdown\n"
"!\n"
"interface HundredGigE0/4/0/2/2\n"
" no shutdown\n"
"!\n"
"interface HundredGigE0/4/0/2/3\n"
" no shutdown\n"
"!\n"
"controller Optics0/4/0/0\n"
" breakout 4x100\n"
"!\n"
"controller Optics0/4/0/2\n"
" breakout 4x100\n"
"!\n"
"interface Loopback0\n"
" ipv4 address 44.44.44.44 255.255.255.255\n"
" ipv6 address 44::44/128\n"
"!\n"
"interface MgmtEth0/RP0/CPU0/0\n"
" ipv4 address 192.168.1.57 255.255.255.255\n"
"!\n"
"cef proactive-arp-nd enable\n"
"hw-module profile pbr vrf-redirect\n"
"hw-module profile npu-compatibility P200\n"
"hw-module profile qos qos-stats-push-collection\n"
"hw-module profile netflow sflow-enable location 0/4/CPU0\n"
"hw-module shutdown location 0/0/CPU0\n"
"hw-module shutdown location 0/1/CPU0\n"
"ssh server v2\n"
"ssh server vrf default\n"
"end\n"
  }
}
